@startuml

skinparam classAttributeIconSize 0

enum MemberType {
     Attacker
     Midfielder
     Defender
     GoalKeeper
}

enum PlayerRole {
    Captain
    CornerShooter
    PenaltyShooter
    FreeKickShooter
}

class Member {
    - id : Long
    - firstName : String
    - lastName : String
    - email : String [Unique]
    - type : MemberType
    - flocking : Integer
    - team : Team
}

class MemberRole {
    + id : Long
    + role : PlayerRole
    + member : Member
    + team : Team
}

class Team {
    - id : Long
    - name : String
    - address : String
    - city : String
    - zipCode : String
    - email : String
}

Member --> MemberType
MemberRole --> PlayerRole

Member "0,1" --> "*" Team : "belongs to"

MemberRole "1,1" --> "*" Member : "plays"
MemberRole "1,1" --> "*" Team : "has"
@enduml
